// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A LinkedList of Students should allow searching for students by specific parameters: csStudents 1`] = `
Array [
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "George",
    "id": 4,
    "lastName": "Berg",
    "universityMajor": "Computer Science",
  },
]
`;

exports[`A LinkedList of Students should allow searching for students by specific parameters: firstNameSamStudents 1`] = `
Array [
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Sam",
    "id": 5,
    "lastName": "Friday",
    "universityMajor": "History",
  },
]
`;

exports[`A LinkedList of Students should allow sorting students by specific properties using insertionSort: sortedById 1`] = `
Array [
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Yanis",
    "id": 2,
    "lastName": "Varoufakis",
    "universityMajor": "Economics",
  },
  Student {
    "firstName": "Slavoj",
    "id": 3,
    "lastName": "Zizek",
    "universityMajor": "History",
  },
  Student {
    "firstName": "George",
    "id": 4,
    "lastName": "Berg",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Sam",
    "id": 5,
    "lastName": "Friday",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Thomas",
    "id": 6,
    "lastName": "Berg",
    "universityMajor": "Mathematics",
  },
]
`;

exports[`A LinkedList of Students should allow sorting students by specific properties using insertionSort: sortedByMajor 1`] = `
Array [
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "George",
    "id": 4,
    "lastName": "Berg",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Yanis",
    "id": 2,
    "lastName": "Varoufakis",
    "universityMajor": "Economics",
  },
  Student {
    "firstName": "Slavoj",
    "id": 3,
    "lastName": "Zizek",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Sam",
    "id": 5,
    "lastName": "Friday",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Thomas",
    "id": 6,
    "lastName": "Berg",
    "universityMajor": "Mathematics",
  },
]
`;

exports[`A LinkedList of Students should allow sorting students by specific properties using mergeSort: sortedById 1`] = `
Array [
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Yanis",
    "id": 2,
    "lastName": "Varoufakis",
    "universityMajor": "Economics",
  },
  Student {
    "firstName": "Slavoj",
    "id": 3,
    "lastName": "Zizek",
    "universityMajor": "History",
  },
  Student {
    "firstName": "George",
    "id": 4,
    "lastName": "Berg",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Sam",
    "id": 5,
    "lastName": "Friday",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Thomas",
    "id": 6,
    "lastName": "Berg",
    "universityMajor": "Mathematics",
  },
]
`;

exports[`A LinkedList of Students should allow sorting students by specific properties using mergeSort: sortedByMajor 1`] = `
Array [
  Student {
    "firstName": "George",
    "id": 4,
    "lastName": "Berg",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Sam",
    "id": 1,
    "lastName": "Bokai",
    "universityMajor": "Computer Science",
  },
  Student {
    "firstName": "Yanis",
    "id": 2,
    "lastName": "Varoufakis",
    "universityMajor": "Economics",
  },
  Student {
    "firstName": "Sam",
    "id": 5,
    "lastName": "Friday",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Slavoj",
    "id": 3,
    "lastName": "Zizek",
    "universityMajor": "History",
  },
  Student {
    "firstName": "Thomas",
    "id": 6,
    "lastName": "Berg",
    "universityMajor": "Mathematics",
  },
]
`;
